--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
