--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
+      - uses: instinctstudios/testim-cli-gh-action@v0.6.0
+        with:
+          project-id: FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
