change proj id to string

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm ci && npm run build
       - uses: instinctstudios/testim-cli-gh-action@v0.6.0
         with:
-          project-id: FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds
+          project-id: "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds"
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
