--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,10 +9,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+
+      - uses: instinctstudios/testim-cli-gh-action@v0.6.0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REVIEWSAPP_94B53 }}'
-          projectId: reviewsapp-94b53
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          token: "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds"
+          project-id: "c9I714KAZ6YVvB6oxrup"
+
+      # - uses: FirebaseExtended/action-hosting-deploy@v0
+      #   with:
+      #     repoToken: '${{ secrets.GITHUB_TOKEN }}'
+      #     firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REVIEWSAPP_94B53 }}'
+      #     projectId: reviewsapp-94b53
+      #   env:
+      #     FIREBASE_CLI_PREVIEWS: hostingchannels
