--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,11 +10,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
 
-      - uses: instinctstudios/testim-cli-gh-action@v0.6.0
-        with:
-          token: "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds"
-          project-id: "c9I714KAZ6YVvB6oxrup"
-
       # - uses: FirebaseExtended/action-hosting-deploy@v0
       #   with:
       #     repoToken: '${{ secrets.GITHUB_TOKEN }}'
@@ -22,3 +17,10 @@ jobs:
       #     projectId: reviewsapp-94b53
       #   env:
       #     FIREBASE_CLI_PREVIEWS: hostingchannels
+
+  test:
+    runs_on: ubuntu_latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Testim
+        run: npm i -g @testim/testim-cli && testim --token "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds" --project "c9I714KAZ6YVvB6oxrup" --grid "Testim-Grid"
