--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,6 +19,7 @@ jobs:
       #     FIREBASE_CLI_PREVIEWS: hostingchannels
 
   test:
+    runs-on: ubuntu_latest
     steps:
       - uses: actions/checkout@v2
       - name: Testim
