--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -23,4 +23,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Testim
-        run: npm i -g @testim/testim-cli && testim --token "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds" --project "c9I714KAZ6YVvB6oxrup" --grid "Testim-Grid"
+        run: sudo npm i -g @testim/testim-cli && testim --token "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds" --project "c9I714KAZ6YVvB6oxrup" --grid "Testim-Grid"
