--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,13 +10,14 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
 
-      # - uses: FirebaseExtended/action-hosting-deploy@v0
-      #   with:
-      #     repoToken: '${{ secrets.GITHUB_TOKEN }}'
-      #     firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REVIEWSAPP_94B53 }}'
-      #     projectId: reviewsapp-94b53
-      #   env:
-      #     FIREBASE_CLI_PREVIEWS: hostingchannels
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REVIEWSAPP_94B53 }}'
+          channelId: preview-channel
+          projectId: reviewsapp-94b53
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
 
   test:
     runs-on: ubuntu-latest
