--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,10 +9,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REVIEWSAPP_94B53 }}'
+          channelId: preview-channel
           projectId: reviewsapp-94b53
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Testim
+        run: sudo npm i -g @testim/testim-cli && testim --token "FdNXFf9ob5huvXCbgnjSxs6iWvQwbsdCpHI7jO5onVbjiFLbds" --project "c9I714KAZ6YVvB6oxrup" --grid "Testim-Grid"
