--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -6,6 +6,10 @@ name: Deploy to Firebase Hosting on PR
   pull_request:
     branches:
       - master
+
+env:
+  ENVIRONMENT: production
+
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
@@ -21,4 +25,3 @@ jobs:
           projectId: reviewsapp-94b53
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
-          ENVIRONMENT: production
