--- a/.github/workflows/firebase-staging-merge.yml
+++ b/.github/workflows/firebase-staging-merge.yml
@@ -11,6 +11,11 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
+
+      - uses: actions/checkout@v2
+      - name: Set Env
+        run: echo "ENVIRONMENT=staging" >> $GITHUB_ENV
+
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
 
