--- a/.github/workflows/firebase-staging-pull-request.yml
+++ b/.github/workflows/firebase-staging-pull-request.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set Env
+        run: echo "ENVIRONMENT=STAGING" >> $GITHUB_ENV
       - run: npm ci && npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
