--- a/.github/workflows/firebase-staging-pull-request.yml
+++ b/.github/workflows/firebase-staging-pull-request.yml
@@ -15,7 +15,7 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo GA_env=STAGING >> .env
+          echo "GA_env=STAGING" >> .env
       - run: npm ci && npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
