--- a/.github/workflows/firebase-staging-pull-request.yml
+++ b/.github/workflows/firebase-staging-pull-request.yml
@@ -7,9 +7,6 @@ name: Deploy to Firebase Staging Hosting on Development PR
 env:
   ENVIRONMENT: staging
 
-inputs:
-  environment: staging
-
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
@@ -18,7 +15,7 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo "GA_env=STAGING" >> .env
+          echo "REACT_APP_GA_env=staging" >> .env
 
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
