--- a/.github/workflows/firebase-staging-pull-request.yml
+++ b/.github/workflows/firebase-staging-pull-request.yml
@@ -15,7 +15,7 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo "REACT_APP_GA_env=staging" >> .env
+          echo REACT_APP_GA_env=staging >> .env
 
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
