--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
-    "build-staging": "REACT_APP_GA_env=staging CI=false && react-scripts build",
+    "build-staging": "REACT_APP_ENVIRONMENT='staging' CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
