--- a/.github/workflows/firebase-staging-pull-request.yml
+++ b/.github/workflows/firebase-staging-pull-request.yml
@@ -5,17 +5,12 @@ name: Deploy to Firebase Staging Hosting on Development PR
       - Development
 
 env:
-  ENVIRONMENT: staging
+  REACT_APP_GA_ENVIRONMENT: staging
 
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
-      # - name: create env file
-      #   run: |
-      #     touch .env
-      #     echo REACT_APP_GA_env=staging >> .env
 
       - uses: actions/checkout@v2
       - run: npm ci && npm run build-staging
