--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,7 +8,7 @@ name: Deploy to Firebase Hosting on PR
       - master
 
 env:
-  ENVIRONMENT: production
+  REACT_APP_GA_ENVIRONMENT: production
 
 jobs:
   build_and_preview:
@@ -25,3 +25,12 @@ jobs:
           projectId: reviewsapp-94b53
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+
+      - name: Enter functions folder and install packages
+        run: cd functions && npm install
+      - name: Deploy firebase functions
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only functions:helloWorld,functions:yoink,functions:blubblub --project default
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
